finished 1st release version

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ pygments: true
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : 西安祥泰电机技术有限公司
   email : blah@email.test
   github : username
   twitter : username
